# ChangeLog for eclass directory
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1746 2015/08/05 19:23:28 williamh Exp $

  05 Aug 2015; William Hubbs <williamh@gentoo.org> golang-vcs-snapshot.eclass:
  add || die and fix indentation

  05 Aug 2015; William Hubbs <williamh@gentoo.org> +golang-vcs-snapshot.eclass:
  Add eclass for vcs snapshots of software written in Go.

  03 Aug 2015; Michael Sterrett <mr_bones_@gentoo.org> python-utils-r1.eclass:
  Add quotes to support reading from files with spaces in the filename.

  03 Aug 2015; Michael Palimaka <kensington@gentoo.org> kde5.eclass:
  Do not compress handbooks.

  02 Aug 2015; James Le Cuirot <chewi@gentoo.org> java-utils-2.eclass:
  Allow java-pkg_get-javac to be called alone. Fixes bug #172594. Thanks to
  sping for the patch. Also simplify die logic around java-pkg_javac-args. die
  handling has improved since this was written.

  31 Jul 2015; Patrice Clement <monsieurp@gentoo.org> java-utils-2.eclass:
  Document JAVA_RM_FILES variable. Also, fix documentation and correct typos in
  java-pkg_rm_files.

  30 Jul 2015; James Le Cuirot <chewi@gentoo.org> java-utils-2.eclass:
  Fix JAVA_RM_FILES by simplifying java-utils-2_src_prepare on the basis that
  we won't be committing EAPI 0|1 ebuilds any more.

  30 Jul 2015; Brian Evans <grknight@gentoo.org> mysql-multilib.eclass:
  Revert bad mycmakeargs changes and introduce 3 eclass variables to have extra
  defines in the ebuild

  30 Jul 2015; Brian Evans <grknight@gentoo.org> mysql-multilib.eclass:
  Reset variables between ABIs

  30 Jul 2015; Brian Evans <grknight@gentoo.org> mysql-multilib.eclass:
  Add blocker below virtual/mysql-5.6-r4 for new split ebuilds

  29 Jul 2015; Brian Evans <grknight@gentoo.org> mysql-multilib.eclass:
  Fix pkg_config function error with non-existant USE flags

  28 Jul 2015; Brian Evans <grknight@gentoo.org> mysql-multilib.eclass: